--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html {
   box-sizing: inherit;
 }
 body {
+  box-shadow: rgba(150, 150, 150) 0 0 10px;
   position: relative;
   height: 100vh;  
   margin: auto;
@@ -40,7 +41,7 @@ p {
   color: #fff;
   border-radius: .25rem;
   display: inline-block;
-  box-shadow:  0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: rgba(150, 150, 150) 0 0 10px;
 }
 
 .dropdown {
@@ -62,7 +63,7 @@ p {
   background-color: #08AE9E;
   padding: 10px;
   border-top: 1px solid #666;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: rgba(150, 150, 150) 0 0 10px;
 }
 .dropdown:hover .dropdown-content {
   display: block;
@@ -83,13 +84,11 @@ footer {
   right: 0;
 }
 footer ul {
+  display: flex;
+  justify-content: space-around;
   list-style: none;
-  margin: 0;
   padding: 0;
-}
-footer ul li {
-  display: inline-block;
-  padding: 5px;
+  margin: 10px 0;
 }
 .list .item {
   display: -ms-flexbox;
@@ -100,7 +99,7 @@ footer ul li {
   margin: 10px 0;
 }
 .list .item:first-child:hover {
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);  
+  box-shadow: rgba(150, 150, 150) 0 0 10px;  
 }
 .list .item span {
   width: 50%;
@@ -124,6 +123,11 @@ footer ul li {
 .detail ul li span {
   float: right;
   margin-left: 5px;
+  padding: 2px
+}
+.buy {
+  cursor: pointer;
+  background: #ddd;
 }
 .luomu {
   background: #6ACA25;
