--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta name="theme-color" content="#08AE9E">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <title>Green Rescue</title>
   </head>
   <body>
@@ -66,6 +66,6 @@
       </ul>      
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="static/scripts.js"></script>
   </body>
 </html>
