--- a/hello/templates/detail.html
+++ b/hello/templates/detail.html
@@ -20,7 +20,7 @@
     </li>
     <li>
       Porkkanoita
-      <span class="buy target">Osta</span>
+      <span class="buy">Osta</span>
       <span class="luomu">Luomu</span>
     </li>
     <li>
