--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-    <a class="ajax" href="search.html">
+    <a class="ajax" href="/search/">
       <h1>
         Green Rescue
       </h1>
@@ -47,7 +47,7 @@
           <input type="checkbox">
         </p>
         <p class="btns">
-          <a class="btn ajax" href="list.html">
+          <a class="btn ajax" href="/list/">
             Katso mitä lähiseudulta löytyy
           </a>
         </p>
