--- a/hello/templates/search.html
+++ b/hello/templates/search.html
@@ -28,7 +28,7 @@
     <input type="checkbox">
   </p>
   <p class="btns">
-    <a class="btn ajax" href="list.html">
+    <a class="btn ajax" href="list">
       Katso mitä lähiseudulta löytyy
     </a>
   </p>
