--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-    <a class="ajax" href="/search/">
+    <a class="ajax" href="">
       <h1>
         Green Rescue
       </h1>
