--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -47,7 +47,7 @@
           <input type="checkbox">
         </p>
         <p class="btns">
-          <a class="btn ajax" href="/list/">
+          <a class="btn ajax" href="/list/" data-dump=".main">
             Katso mitä lähiseudulta löytyy
           </a>
         </p>
@@ -65,6 +65,9 @@
         <li>Asetukset</li>
       </ul>      
     </footer>
+    <div class="modal">
+
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="static/scripts.js"></script>
   </body>
