--- a/hello/templates/search.html
+++ b/hello/templates/search.html
@@ -28,7 +28,7 @@
     <input type="checkbox">
   </p>
   <p class="btns">
-    <a class="btn ajax" href="/list/">
+    <a class="btn ajax" href="/list/" data-dump=".main">
       Katso mitä lähiseudulta löytyy
     </a>
   </p>
