--- a/hello/templates/list.html
+++ b/hello/templates/list.html
@@ -1,5 +1,5 @@
 <article class="list">
-  <a class="item ajax" href="/detail/">
+  <a class="item ajax" href="/detail/" data-dump=".main">
     <span>
       Persiljaa 10€ / kg
     </span>
