--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-    <a class="ajax" href="">
+    <a class="ajax" href="" data-dump=".main">
       <h1>
         Green Rescue
       </h1>
