--- a/hello/static/styles.css
+++ b/hello/static/styles.css
@@ -14,62 +14,57 @@ body {
 body > * {
   padding: 20px;
 }
-header {
-  text-align: center;
-}
-header h1 {
-  font-size: 1.8em;
-  font-weight: 600;
-  color: #08AE9E;
-  margin: 0;
-}
-section {
-  position: relative;
-}
-
 p {
   margin: 10px 0;
 }
-
+nav {
+  background: #08AE9E;
+  text-align: center;
+}
+nav h1 {
+  font-size: 1.8em;
+  font-weight: 600;
+  margin: 0;
+}
+form {
+  position: relative;
+}
 .btns {
   text-align: center;
   padding: 20px;
 }
-.btn {
-  padding: 10px;
-  background: #08AE9E;
-  color: #fff;
-  border-radius: .25rem;
-  display: inline-block;
-  box-shadow: rgba(150, 150, 150) 0 0 10px;
+.btn,
+.textfield {
+  border: 3px solid rgba(0, 0, 0, .5);
+  margin: 10px;
+  border-radius: .75rem;
+  padding: 15px;
+  background: #fff;
+  outline: 0;
 }
-
-.dropdown {
-  position: relative;
-  padding: 10px;
-  background-color: #08AE9E;
+.search {
+  text-align: center;
+  padding-top: 30%;
 }
-.dropdown > p:after {
-  content: "^";
-  float: right;
-  transform: rotate(180deg);
+.q {
+  padding-left: 40px;
 }
-.dropdown-content {
-  left: 0;
-  top: 100%;
-  display: none;
+.search button:nth-of-type(1) {
   position: absolute;
-  width: 100%;
-  background-color: #08AE9E;
-  padding: 10px;
-  border-top: 1px solid #666;
-  box-shadow: rgba(150, 150, 150) 0 0 10px;
+  left: calc(50% - 110px);
+  padding: 4px;
+  top: 10px;
+  border-color: transparent;
 }
-.dropdown:hover .dropdown-content {
+.search button:nth-of-type(2) {
+  position: absolute;
+  right: calc(50% - 110px);
+  padding: 4px;
+  top: 10px;
+}
+.search button:nth-of-type(3) {
   display: block;
-}
-.option {
-  cursor: pointer;
+  margin: 10px auto;
 }
 
 .ajax {
@@ -78,21 +73,6 @@ p {
   text-decoration: none;
 }
 
-footer {
-  background-color: #08AE9E;
-  padding: 20px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-footer ul {
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
-  padding: 0;
-  margin: 10px 0;
-}
 .list .item {
   display: -ms-flexbox;
   display: flex;
