--- a/hello/static/styles.css
+++ b/hello/static/styles.css
@@ -33,14 +33,35 @@ form {
   text-align: center;
   padding: 20px;
 }
+.modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: absolute;
+  background: rgba(0, 0, 0, .5);
+  padding: 40px;
+}
 .btn,
-.textfield {
+.textfield,
+.modal>* {
   border: 3px solid rgba(0, 0, 0, .5);
   margin: 10px;
   border-radius: .75rem;
   padding: 15px;
   background: #fff;
   outline: 0;
+}
+.filter h2 {
+  text-align: center;
+}
+.filter ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.filter ul li {
+  padding: 10px;
 }
 .search {
   text-align: center;
@@ -66,7 +87,6 @@ form {
   display: block;
   margin: 10px auto;
 }
-
 .ajax {
   color: black;
   cursor: pointer;
