--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -22,19 +22,19 @@
         <form class="search-form" method="GET" action="/list/">
           <input class="textfield q" name="q" type="search" placeholder="Etsi..." aria-label="Hae"
             maxlength="30" autocomplete="off" accept-charset="utf-8" />
-          <button class="btn" type="submit" title="Hae">
+          <button class="btn ajax" type="submit" title="Hae" data-url="/list/" data-dump=".main">
             <i class="fas fa-search"></i>
           </button>
           <button class="btn" type="button" title="Hakuasetukset" onclick="openModal()">
             <i class="fas fa-ellipsis-h"></i>
           </button>
-          <button class="btn" type="submit" title="Hae">
+          <button class="btn ajax" type="submit" title="Hae" data-url="/list/" data-dump=".main">
             Hae
           </button>
         </form>
       </div>
     </div>
-    <div class="modal">
+    <div class="modal" onclick="closeModal()">
       <div class="filter">
         <h2>
           Suodata hakutuloksia
