--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -11,11 +11,17 @@
   </head>
   <body>
     <nav>
-    <a class="ajax" href="" data-dump=".main">
+      <span>
+        <i class="fas fa-arrow-left"></i>
+      </span>
+      <span>
+        <i class="fas fa-bars"></i>
+      </span>
       <h1>
-        Green Rescue
+        <a class="ajax" href="" data-dump=".main">
+          Green Rescue
+        </a>
       </h1>
-    </a>
     </nav>
     <div class="main">
       <div class="search">
