--- a/hello/templates/detail.html
+++ b/hello/templates/detail.html
@@ -1,4 +1,4 @@
-<article class="detail">
+<div class="detail">
   <h1>
     Helsingin Heinähattu Oy
   </h1>
@@ -32,4 +32,4 @@
   <div class="description">
     Myyjän esittely
   </div>
-</article>
+</div>
