--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,49 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <meta name="theme-color" content="#08AE9E">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/styles.css">
-    <title>Green Rescue</title>
-  </head>
-  <body>
-    <div class="content">
-      <nav>
-        <button class="btn" type="button" onclick="window.history.back()">
-          <i class="fas fa-arrow-left"></i>
-        </button>
-        <button class="btn" type="button">
-          <i class="fas fa-bars"></i>
-        </button>
-        <h1>
-          <a class="ajax" href="" data-dump=".main">
-            Green Rescue
-          </a>
-        </h1>
-      </nav>
-      <div class="main">
-        <div class="search">
-          <input class="textfield q" name="q" type="search" placeholder="Etsi..." aria-label="Hae" maxlength="30" autocomplete="off"
-            accept-charset="utf-8" />
-          <button class="btn ajax" type="submit" title="Hae" data-url="/drop/" data-dump=".main">
-            <i class="fas fa-search"></i>
-          </button>
-          <button class="btn ajax" type="button" title="Hakuasetukset" data-url="/settings/" data-dump=".modal">
-            <i class="fas fa-ellipsis-h"></i>
-          </button>
-          <button class="btn ajax" type="submit" title="Hae" data-url="/results/" data-dump=".results">
-            Hae
-          </button>
-          <div class="results"></div>
-        </div>
-      </div>
-    </div>
-    <div class="modal">
-    </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="static/scripts.js"></script>
-  </body>
-</html>
+{% extends request.is_ajax|yesno:"ajax.html,base.html" %}
+{% load staticfiles %}
+
+{% block content %}
+  <div class="search">
+    <input class="textfield q" name="q" type="search" placeholder="Etsi..." aria-label="Hae" maxlength="30" autocomplete="off"
+      accept-charset="utf-8" />
+    <button class="btn ajax" type="submit" title="Hae" data-url="/drop/" data-dump=".main">
+      <i class="fas fa-search"></i>
+    </button>
+    <button class="btn ajax" type="button" title="Hakuasetukset" data-url="/settings/" data-dump=".modal">
+      <i class="fas fa-ellipsis-h"></i>
+    </button>
+    <button class="btn ajax" type="submit" title="Hae" data-url="/results/" data-dump=".results">
+      Hae
+    </button>
+    <div class="results"></div>
+  </div>
+{% endblock %}
