--- a/hello/templates/detail.html
+++ b/hello/templates/detail.html
@@ -1,35 +1,79 @@
 <div class="detail">
-  <h1>
-    Helsingin Heinähattu Oy
-  </h1>
-  <div class="img">
-    Kuva myyjästä
+  <div>
+    <button class="btn" style="float:right">
+      <i class="fas fa-shopping-basket fa-lg"></i>
+    </button>
+    <h1>
+      Kampin noutopiste
+    </h1>
+    <i class="fas fa-info-circle fa-lg"></i>
   </div>
-  <ul>
-    <li>
-      Helsinki Porvoonkatu 8
-    </li>
-    <li>
-      Perunoita
-      <span class="buy">Osta</span>
-    </li>
-    <li>
-      Persiljaa
-      <span class="buy">Osta</span>
-      <span class="luomu">Luomu</span>
-    </li>
-    <li>
-      Porkkanoita
-      <span class="buy">Osta</span>
-      <span class="luomu">Luomu</span>
-    </li>
-    <li>
-      <div class="contact">
-        Yhteystiedot
+  <div class="item">
+    <div>
+      <h1>
+        PORKKANA
+      </h1>
+      <h2>
+        LUOMU
+      </h2>
+      <div class="amount">
+        <i class="fas fa-chevron-left fa-2x decrease"></i>
+        <i class="fas fa-chevron-right fa-2x increase"></i>
+        <span>
+          3
+        </span>
       </div>
-    </li>
-  </ul>
-  <div class="description">
-    Myyjän esittely
+      <i class="fas fa-cart-plus fa-2x"></i>
+    </div>
+  </div>
+  <div class="item">
+    <div>
+      <h1>
+        KANANMUNA
+      </h1>
+      <h2>
+        LUOMU
+      </h2>
+      <div class="amount">
+        <i class="fas fa-chevron-left fa-2x decrease"></i>
+        <i class="fas fa-chevron-right fa-2x increase"></i>
+        <span>
+          36
+        </span>
+      </div>
+      <i class="fas fa-cart-plus fa-2x"></i>
+    </div>
+  </div>
+  <div class="item">
+    <div>
+      <h1>
+        PERUNA
+      </h1>
+      <br>
+      <div class="amount">
+        <i class="fas fa-chevron-left fa-2x decrease"></i>
+        <i class="fas fa-chevron-right fa-2x increase"></i>
+        <span>
+          5
+        </span>
+      </div>
+      <i class="fas fa-cart-plus fa-2x"></i>
+    </div>
+  </div>
+  <div class="item">
+    <div>
+      <h1>
+        PERSILJA
+      </h1>
+      <br>
+      <div class="amount">
+        <i class="fas fa-chevron-left fa-2x decrease"></i>
+        <i class="fas fa-chevron-right fa-2x increase"></i>
+        <span>
+          0
+        </span>
+      </div>
+      <i class="fas fa-cart-plus fa-2x"></i>
+    </div>    
   </div>
 </div>
