--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -8,7 +8,7 @@
     <button class="btn ajax" type="submit" title="Hae" data-url="/drop/" data-dump=".main">
       <i class="fas fa-search"></i>
     </button>
-    <button class="btn ajax" type="button" title="Hakuasetukset" data-url="/settings/" data-dump=".modal">
+    <button class="btn ajax" type="button" title="Hakuasetukset" data-url="/settings/" data-dump="#modal">
       <i class="fas fa-ellipsis-h"></i>
     </button>
     <button class="btn ajax" type="submit" title="Hae" data-url="/results/" data-dump=".results">
