--- a/hello/static/styles.css
+++ b/hello/static/styles.css
@@ -53,9 +53,9 @@ form {
   opacity: .5;
 }
 .content > * {
-  padding: 20px;
+  padding: 20px 10px;
 }
-.modal {
+#modal {
   display: none;
   width: 100%;
   height: 100%;
@@ -66,7 +66,9 @@ form {
 }
 .btn,
 .textfield,
-.modal>* {
+#modal>*,
+.results>*,
+.item>* {
   border: 3px solid rgba(0, 0, 0, .5);
   margin: 10px;
   border-radius: .75rem;
@@ -112,49 +114,51 @@ form {
   display: block;
   margin: 10px auto;
 }
-
 .results>* {
   margin: 20px 0;
   width: 100%;
-  background: #ddd;
 }
 .results>*:hover {
   box-shadow: rgba(150, 150, 150) 0 0 10px;  
 }
-.detail .img {
-  float: left;
-  width: 40%;
-  height: 200px;
-  background: #ddd;
-  margin-right: 2%;
-}
-.detail ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.detail ul li {
-  margin: 7px 0;
-}
-.detail ul li span {
-  float: right;
-  margin-left: 5px;
-  padding: 2px
-}
-.buy {
-  cursor: pointer;
-  background: #ddd;
-}
-.luomu {
-  background: #6ACA25;
-}
-.detail .contact {
+.detail {
+  margin: 0 -10px;
+  display: -ms-flexbox;
   display: flex;
-  width: 58%;
-  height: 100px;
-  background: #ddd;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-.detail .description {
-  background: #ddd;
-  height: 150px;
+.detail h1,
+.amount span {
+  display: inline-block;
+  color: #6DA56F;
+  font-size: 1.25rem;
+  margin: 5px 0;
+  text-shadow: 0 0 #000;
+}
+.detail h2 {
+  font-size: 1rem;
+  margin: 5px 0;
+}
+.detail > *:first-child {
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 10px;
+}
+.item {
+  text-align: center;
+  width: 50%;
+}
+.item i {
+  cursor: pointer;
+}
+.amount {
+  padding: 20px;
+}
+.amount .decrease {
+  float: left;
+}
+.amount .increase {
+  float: right;
 }
