--- a/hello/templates/detail.html
+++ b/hello/templates/detail.html
@@ -23,7 +23,7 @@
           3
         </span>
       </div>
-      <i class="fas fa-cart-plus fa-2x"></i>
+      <i class="fas fa-cart-plus fa-2x cart"></i>
     </div>
   </div>
   <div class="item">
@@ -41,7 +41,7 @@
           36
         </span>
       </div>
-      <i class="fas fa-cart-plus fa-2x"></i>
+      <i class="fas fa-cart-plus fa-2x cart"></i>
     </div>
   </div>
   <div class="item">
@@ -57,7 +57,7 @@
           5
         </span>
       </div>
-      <i class="fas fa-cart-plus fa-2x"></i>
+      <i class="fas fa-cart-plus fa-2x cart"></i>
     </div>
   </div>
   <div class="item">
@@ -73,7 +73,7 @@
           0
         </span>
       </div>
-      <i class="fas fa-cart-plus fa-2x"></i>
+      <i class="fas fa-cart-plus fa-2x cart"></i>
     </div>    
   </div>
 </div>
