--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -12,7 +12,7 @@
       <i class="fas fa-ellipsis-h"></i>
     </button>
     <button class="btn ajax" type="submit" title="Hae" data-url="/results/" data-dump=".results">
-      Hae
+      Hae lähimmät noutopisteet
     </button>
     <div class="results"></div>
   </div>
