--- a/hello/templates/results.html
+++ b/hello/templates/results.html
@@ -1,10 +1,10 @@
 <button class="btn ajax" data-url="/detail/" data-dump=".main">
   <p>
-    Kampin noutopiste
+    Kampin noutopiste ~ 5 km päässä
   </p>
 </button>
 <button class="btn ajax" data-url="/detail/" data-dump=".main">
   <p>
-    Pasilan noutopiste
+    Pasilan noutopiste ~ 7 km päällä
   </p>
 </button>
