--- a/hello/templates/detail.html
+++ b/hello/templates/detail.html
@@ -24,6 +24,9 @@
             0
           </span>
         </div>
+        <p>
+          KG
+        </p>
         <i class="fas fa-cart-plus fa-2x cart"></i>
       </div>
     </div>
@@ -42,6 +45,9 @@
             0
           </span>
         </div>
+        <p>
+          KPL
+        </p>
         <i class="fas fa-cart-plus fa-2x cart"></i>
       </div>
     </div>
@@ -58,6 +64,9 @@
             0
           </span>
         </div>
+        <p>
+          KG
+        </p>
         <i class="fas fa-cart-plus fa-2x cart"></i>
       </div>
     </div>
@@ -74,6 +83,9 @@
             0
           </span>
         </div>
+        <p>
+          KG
+        </p>
         <i class="fas fa-cart-plus fa-2x cart"></i>
       </div>    
     </div>
