--- a/hello/templates/results.html
+++ b/hello/templates/results.html
@@ -8,3 +8,8 @@
     Pasilan noutopiste ~ 7 km päällä
   </p>
 </button>
+<button class="btn ajax" data-url="/detail/" data-dump=".main">
+  <p>
+    Malmin noutopiste ~ 12 km päällä
+  </p>
+</button>
