--- a/hello/templates/detail.html
+++ b/hello/templates/detail.html
@@ -17,7 +17,7 @@
         <h2>
           LUOMU
         </h2>
-        <div class="amount">
+        <div class="amount" data-amount="0">
           <i class="fas fa-chevron-left fa-2x decrease"></i>
           <i class="fas fa-chevron-right fa-2x increase"></i>
           <span>
@@ -38,7 +38,7 @@
         <h2>
           LUOMU
         </h2>
-        <div class="amount">
+        <div class="amount" data-amount="0">
           <i class="fas fa-chevron-left fa-2x decrease"></i>
           <i class="fas fa-chevron-right fa-2x increase"></i>
           <span>
