--- a/index/templates/basket.html
+++ b/index/templates/basket.html
@@ -34,7 +34,7 @@
     <br />
     <br />
     <br />
-    <button class="btn">
+    <button class="btn buy">
       Maksa nyt
     </button>
   </div>
