paid view added

--- a/index/templates/detail.html
+++ b/index/templates/detail.html
@@ -5,9 +5,9 @@
         <i class="fas fa-shopping-basket fa-lg"></i>
       </button>
       <h1>
-        Kampin noutopiste
+        Pasilan noutopiste
       </h1>
-      <i class="fas fa-info-circle fa-lg"></i>
+      <i style="cursor:pointer" class="fas fa-info-circle fa-lg"></i>
     </div>
     <div class="item">
       <div>
