--- a/index/templates/results.html
+++ b/index/templates/results.html
@@ -1,15 +1,15 @@
 <button class="btn ajax" data-url="/detail/" data-dump=".main">
   <p>
-    Kampin noutopiste ~ 5 km päässä
+    Pasilan noutopiste ~ 5 km päässä
   </p>
 </button>
 <button class="btn ajax" data-url="/detail/" data-dump=".main">
   <p>
-    Pasilan noutopiste ~ 7 km päällä
-  </p>
+    Malmin noutopiste ~ 7 km päällä
+  </p> 
 </button>
 <button class="btn ajax" data-url="/detail/" data-dump=".main">
   <p>
-    Malmin noutopiste ~ 12 km päällä
+    Kampin noutopiste ~ 12 km päällä
   </p>
 </button>
