--- a/index/templates/basket.html
+++ b/index/templates/basket.html
@@ -1,10 +1,10 @@
 {% block content %}
   <div class="basket">
     <h1>
-      Pasilan toimituspiste
+      Pasilan noutopiste
     </h1>
     <h4>
-      Porvoonkatu 46
+      Ratapihantie 13
       <i style="cursor:pointer" class="fas fa-map-marker-alt"></i>
     </h4>
     <div>
@@ -34,7 +34,7 @@
     <br />
     <br />
     <br />
-    <button class="btn buy">
+    <button type="button" data-dump="#modal" data-url="/paid/" class="btn ajax">
       Maksa nyt
     </button>
   </div>
