paid view added

--- a/index/templates/basket.html
+++ b/index/templates/basket.html
@@ -5,7 +5,10 @@
     </h1>
     <h4>
       Ratapihantie 13
-      <i style="cursor:pointer" class="fas fa-map-marker-alt"></i>
+      <button type="button" class="btn ajax" data-dump="#modal"
+      data-url="//maps.google.com/maps?width=100%&amp;height=400&amp;hl=en&amp;q=Ratapihantie%2013+()&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed">
+        <i class="fas fa-map-marker-alt"></i>
+      </button>
     </h4>
     <div>
       <table>
