paid view added

--- a/index/templates/basket.html
+++ b/index/templates/basket.html
@@ -17,6 +17,10 @@
         </thead>
         <tbody>
           <tr>
+            <td>Kananmuna 3 kpl</td>
+            <td>1,5 €</td>
+          </tr>
+          <tr>
             <td>Peruna 5 kg</td>
             <td>5 €</td>
           </tr>
